--- a/sig.css
+++ b/sig.css
@@ -79,7 +79,7 @@ img{
     /* border: 1px solid black; */
     width: 460px;
     margin-left: 120px;
-    margin-top: 10px;
+/*     margin-top: 10px; */
     
 }
 
